Tue Apr 15 12:07:17 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	*  (extra.cc): system("sh",command) returns exit status of command

Thu Apr 10 11:59:41 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* remote quit is now arranged using MP_CopMpQuit

	* Updated mpsr_* files for new naming convention of MP v:1.1.2 

Tue Apr  8 10:43:48 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Reimplemented link structures. Cleaned it up. Introduced assignment
link = link. Fixed some bugs in asciidump. Made proc's work for MP links.

Sat Mar 29 16:01:39 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* silink.cc (DumpQring): Takes care of dumping a Qring
	(slInit): enable ascii link specification of the form "filename
	mode:w"

Fri Mar 28 14:12:05 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Added routines dump(link) and getdump(link) for ascii and MP
	  links 

	* ipconv.cc (dConvertTypes): added int->module conversion so that
	  'module m = 0' works

	* iparith.cc (jjVAR1): added LINK_CMD to list of typeof(...)

Thu Mar 27 21:20:20 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* added real time timer (rtimer) analog to timer

	* added command-line option "-d ticks_per_second" and "-m
	  min_displayed_time_in_sec" and chahnged timer accordingly

	* added some #ifdef HAVE_FGLM in fglm*.cc 
	

Wed Mar 26 14:02:15 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* added reference counter to links, updated slKill, slCopy, slInit
	* various small bug fixes for Batch mode

Mon Mar 24 14:27:26 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* sing_mp.cc (slOpenWriteMPFile): Added append and write mode to
	  open MP:file 

Sun Mar 23 20:48:41 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>
